# rust-secp256k1-zkp

./: .dprintrc.json  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
contrib/: test.sh  vendor-libsecp-zkp.sh
secp256k1-zkp/: Cargo.toml
secp256k1-zkp-dev/: Cargo.toml
secp256k1-zkp-dev/src/: lib.rs
secp256k1-zkp-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  vendor-libsecp.sh
secp256k1-zkp-sys/depend/: scratch_impl.h.patch  secp256k1-HEAD-revision.txt  secp256k1-zkp-HEAD-revision.txt  secp256k1.c.patch  secp256k1.h.patch  surjection_impl.h.patch  surjection_main_impl.h.patch  util.h.patch
secp256k1-zkp-sys/depend/secp256k1/: .gitignore  CONTRIBUTING.md  Makefile.am
secp256k1-zkp-sys/depend/secp256k1-zkp/: Makefile.am  configure.ac
secp256k1-zkp-sys/depend/secp256k1-zkp/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
secp256k1-zkp-sys/depend/secp256k1-zkp/include/: secp256k1.h  secp256k1_ecdh.h  secp256k1_generator.h  secp256k1_musig.h  secp256k1_preallocated.h  secp256k1_rangeproof.h  secp256k1_recovery.h  secp256k1_schnorrsig.h  secp256k1_surjectionproof.h  secp256k1_whitelist.h
secp256k1-zkp-sys/depend/secp256k1-zkp/sage/: secp256k1.sage
secp256k1-zkp-sys/depend/secp256k1-zkp/src/: bench_ecdh.c  bench_ecmult.c  bench_generator.c  bench_internal.c  bench_rangeproof.c  bench_recover.c  bench_schnorrsig.c  bench_sign.c  bench_verify.c  bench_whitelist.c  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  gen_context.c  group.h  group_impl.h  hash.h  hash_impl.h  num.h  num_gmp.h  num_gmp_impl.h  scalar.h  scalar_4x64.h  scalar_4x64_impl.h  scalar_8x32.h  (+12 more)
secp256k1-zkp-sys/depend/secp256k1-zkp/src/asm/: field_10x26_arm.s
secp256k1-zkp-sys/depend/secp256k1-zkp/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h  org_bitcoin_Secp256k1Context.c  org_bitcoin_Secp256k1Context.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/ecdh/: Makefile.am.include  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/generator/: Makefile.am.include  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/musig/: Makefile.am.include  example.c  main_impl.h  musig.md  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/rangeproof/: Makefile.am.include  borromean.h  borromean_impl.h  main_impl.h  pedersen.h  pedersen_impl.h  rangeproof.h  rangeproof_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/recovery/: Makefile.am.include  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/schnorrsig/: Makefile.am.include  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/surjection/: Makefile.am.include  main_impl.h  surjection.h  surjection_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1-zkp/src/modules/whitelist/: Makefile.am.include  main_impl.h  tests_impl.h  whitelist_impl.h
secp256k1-zkp-sys/depend/secp256k1/cmake/: TryAppendCFlags.cmake
secp256k1-zkp-sys/depend/secp256k1/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
secp256k1-zkp-sys/depend/secp256k1/doc/: ellswift.md
secp256k1-zkp-sys/depend/secp256k1/examples/: ecdh.c  ecdsa.c  musig.c  schnorr.c
secp256k1-zkp-sys/depend/secp256k1/include/: secp256k1.h  secp256k1.h.orig  secp256k1_bppp.h  secp256k1_ecdh.h  secp256k1_ecdsa_adaptor.h  secp256k1_ecdsa_s2c.h  secp256k1_ellswift.h  secp256k1_extrakeys.h  secp256k1_generator.h  secp256k1_musig.h  secp256k1_preallocated.h  secp256k1_rangeproof.h  secp256k1_recovery.h  secp256k1_schnorrsig.h  secp256k1_schnorrsig_halfagg.h  secp256k1_surjectionproof.h  secp256k1_whitelist.h
secp256k1-zkp-sys/depend/secp256k1/sage/: gen_exhaustive_groups.sage  gen_split_lambda_constants.sage  prove_group_implementations.sage  secp256k1.sage
secp256k1-zkp-sys/depend/secp256k1/src/: assumptions.h  bench.c  bench_bppp.c  bench_ecdh.c  bench_ecmult.c  bench_generator.c  bench_internal.c  bench_rangeproof.c  bench_recover.c  bench_schnorrsig.c  bench_sign.c  bench_verify.c  bench_whitelist.c  ctime_tests.c  eccommit.h  eccommit_impl.h  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_compute_table.h  ecmult_compute_table_impl.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_compute_table.h  ecmult_gen_compute_table_impl.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  gen_context.c  group.h  (+42 more)
secp256k1-zkp-sys/depend/secp256k1/src/asm/: field_10x26_arm.s
secp256k1-zkp-sys/depend/secp256k1/src/modules/bppp/: Makefile.am.include  bppp_norm_product_impl.h  bppp_transcript_impl.h  bppp_util.h  main.h  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/modules/ecdh/: Makefile.am.include  bench_impl.h  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/modules/ecdsa_adaptor/: Makefile.am.include  dleq_impl.h  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/modules/ecdsa_s2c/: Makefile.am.include  main_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/modules/ellswift/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/modules/extrakeys/: Makefile.am.include  hsort.h  hsort_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-zkp-sys/depend/secp256k1/src/wycheproof/: WYCHEPROOF_COPYING
secp256k1-zkp-sys/src/: error_callbacks.rs  ffi.rs  lib.rs  macros.rs  recovery.rs  types.rs  zkp.rs
secp256k1-zkp-sys/src/schnorrsig/: ffi.rs  mod.rs
secp256k1-zkp-sys/wasm-sysroot/: stdio.h  string.h
secp256k1-zkp/src/: lib.rs
secp256k1-zkp/src/schnorrsig/: mod.rs
(+63 files in other folders)
