[package]
name = "secp256k1-zkp"
version = "0.4.0"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>",
            "Lucas Soriano <lucas@comit.network>",
            "Thomas Eizinger <thomas@comit.network>" ]
license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
repository = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
description = "Rust bindings for the `libsecp256k1-zkp` library."
keywords = [ "crypto", "ECDSA", "secp256k1-zkp", "libsecp256k1-zkp", "elements" ]
readme = "README.md"
autoexamples = false # Remove when edition 2018 https://github.com/rust-lang/cargo/issues/5330

# Should make docs.rs show all functions, even those behind non-default features
[package.metadata.docs.rs]
features = [ "use-rand", "rand-std", "use-serde", "recovery" ]

[features]
unstable = ["recovery", "rand-std", "secp256k1/unstable"]
default = ["std"]
std = ["secp256k1-zkp-sys/std", "secp256k1/std"]
rand-std = ["rand/std", "secp256k1/rand-std"]
recovery = ["secp256k1-zkp-sys/recovery", "secp256k1/recovery"]
lowmemory = ["secp256k1-zkp-sys/lowmemory", "secp256k1/lowmemory"]
global-context = ["std", "rand-std", "secp256k1/global-context"]
hashes = ["bitcoin_hashes", "secp256k1/bitcoin_hashes"]
use-serde = ["serde", "secp256k1/serde"]
use-rand = ["rand", "secp256k1/rand"]

[dependencies]
secp256k1 = "0.20.0"
secp256k1-zkp-sys = { version = "0.4.0", default-features = false, path = "./secp256k1-zkp-sys" }
bitcoin_hashes = { version = "0.9", optional = true }
rand = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.6"
rand_core = "0.4"
serde_test = "1.0"
bitcoin_hashes = "0.9"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
rand = { version = "0.6", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib", "rlib"]
