[package]
name = "secp256k1-zkp"
version = "0.9.2"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>",
            "Lucas Soriano <lucas@comit.network>",
            "Thomas Eizinger <thomas@comit.network>" ]
license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
repository = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
description = "Rust bindings for the `libsecp256k1-zkp` library."
keywords = [ "crypto", "ECDSA", "secp256k1-zkp", "libsecp256k1-zkp", "elements" ]
readme = "README.md"
autoexamples = false # Remove when edition 2018 https://github.com/rust-lang/cargo/issues/5330
edition = "2018"

# Should make docs.rs show all functions, even those behind non-default features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["secp256k1-zkp-sys/std", "secp256k1/std"]
rand-std = ["actual-rand/std", "secp256k1/rand-std"]
recovery = ["secp256k1-zkp-sys/recovery", "secp256k1/recovery"]
lowmemory = ["secp256k1-zkp-sys/lowmemory", "secp256k1/lowmemory"]
global-context = ["std", "rand-std", "secp256k1/global-context"]
bitcoin_hashes = ["secp256k1/bitcoin_hashes"]
serde = ["actual-serde", "secp256k1/serde"]
rand = ["actual-rand", "secp256k1/rand"]

[dependencies]
actual-serde = { package = "serde", version = "1.0", default-features = false, optional = true }
actual-rand = { package = "rand", version = "0.8", default-features = false, optional = true }
secp256k1 = "0.27.0"
secp256k1-zkp-sys = { version = "0.8.1", default-features = false, path = "./secp256k1-zkp-sys" }
internals = { package = "bitcoin-private", version = "0.1.0" }

[dev-dependencies]
serde_test = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
