[package]
name = "secp256k1-zkp-sys"
version = "0.1.0"
authors = ["Jonas Nick <jonasd.nick@gmail.com>"]

license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
repository = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
description = "Rust bindings for the Elements Project's `libsecp256k1-zkp` library. Implements various cryptographic schemes for the SECG elliptic curve group secp256k1 and related utilities. This is a low-level, no_std library. There is also w higher level library called secp256k1-zkp."
keywords = [ "crypto", "Schnorr", "secp256k1", "secp256k1-zkp", "bitcoin" ]
readme = "README.md"
build = "build.rs"

[package.metadata.docs.rs]
features = [ "serde" ]
all-features = true

[build-dependencies]
cc = ">= 1.0.28, <= 1.0.35"

[dev-dependencies]
rand = "0.6"
serde_test = "1.0"

[dev-dependencies.secp256k1-zkp-dev]
version = "0.1"
path = "../secp256k1-zkp-dev/"

[dependencies.secp256k1]
version = "0.13"

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
