[package]
name = "secp256k1-zkp-sys"
version = "0.1.0"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>",
            "Steven Roose <steven@stevenroose.org>",
            "Lucas Soriano <lucas@comit.network>",
            "Thomas Eizinger <thomas@comit.network>" ]
license = "CC0-1.0"
homepage = "https://github.com/comit-network/rust-secp256k1-zkp/"
repository = "https://github.com/comit-network/rust-secp256k1-zkp/"
description = "FFI for `libsecp256k1-zkp` library."
keywords = [ "secp256k1", "libsecp256k1-zkp", "ffi" ]
readme = "README.md"
build = "build.rs"
links = "rustsecp256k1zkp_v0_1_0"

# Should make docs.rs show all functions, even those behind non-default features
[package.metadata.docs.rs]
features = [ "recovery", "endomorphism", "lowmemory" ]

[build-dependencies]
cc = "1.0.28"

[dependencies]
secp256k1-sys = { git = "https://github.com/rust-bitcoin/rust-secp256k1", features = ["endomorphism"] }

[features]
default = ["std"]
recovery = ["secp256k1-sys/recovery"]
lowmemory = ["secp256k1-sys/lowmemory"]
std = []

# Use this feature to not compile the bundled libsecp256k1 C symbols,
# but use external ones. Use this only if you know what you are doing!
external-symbols = []

# Do not use this feature! HAZMAT. (meant for Fuzzing only. this is *BROKEN CRYPTOGRAPHY*)
fuzztarget = []
