[package]
name = "secp256k1-zkp"
version = "0.1.0"
authors = ["Jonas Nick <jonasd.nick@gmail.com>"]

license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
repository = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
description = "Rust bindings for the Elements Project's `libsecp256k1-zkp` library. Implements various cryptographic schemes for the SECG elliptic curve group secp256k1 and related utilities. Based on the lower-level, no_std secp256k1-zkp-sys library."
keywords = [ "crypto", "Schnorr", "secp256k1", "secp256k1-zkp", "bitcoin" ]
readme = "README.md"

[package.metadata.docs.rs]
features = [ "serde", "rand-zkp"]
all-features = true

[features]
serde = ["secp256k1-zkp-sys/serde"]
rand-zkp = ["secp256k1/rand"]

[dev-dependencies]
rand = "0.6"

[dev-dependencies.secp256k1-zkp-dev]
version = "0.1"
path = "../secp256k1-zkp-dev/"

[dependencies.secp256k1]
version = "0.13"

[dependencies.secp256k1-zkp-sys]
version = "0.1"
path = "../secp256k1-zkp-sys/"
